objects/Milestone__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a significant event in the project&apos;s lifespan.</description>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>Actual date of completion of Milestone.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjusted_Target_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to mark updated Target Dates</inlineHelpText>
        <label>Adjusted Target End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjusted_Target_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to mark updated Target Dates</inlineHelpText>
        <label>Adjusted Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Initiative_Milestone__c</fullName>
        <description>Milestone for an Asset or a Initiative.</description>
        <inlineHelpText>Milestone for an Asset or a Initiative.</inlineHelpText>
        <label>Asset/Initiative Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gain Stakeholder Buy-in</fullName>
                </value>
                <value>
                    <fullName>Gather Requirements/ Define Scope</fullName>
                </value>
                <value>
                    <fullName>Design/Draft</fullName>
                </value>
                <value>
                    <fullName>Build/Develop Final Content</fullName>
                </value>
                <value>
                    <fullName>Test/Validate</fullName>
                </value>
                <value>
                    <fullName>Deploy/Publish</fullName>
                </value>
                <value>
                    <fullName>Optimize/Maintain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <formula>if((Planned_End_Date__c &lt; TODAY()) &amp;&amp; ( VALUE ( TEXT (Complete2__c ) ) &lt;&gt; 100), &quot;Red&quot;,
 

if((Planned_End_Date__c &lt;= TODAY()+5) &amp;&amp; ( VALUE ( TEXT (Complete2__c ) ) &lt;&gt; 100), &quot;Yellow&quot;,
 

&quot;Green&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments or additional information about Milestone.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this comment box to indicate the variance between milestone dates. (e.g. Holidays)</inlineHelpText>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete2__c</fullName>
        <label>% Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone_Id__c</fullName>
        <description>Milestone Id to distinguish a milestone for an Asset/Initiative.</description>
        <displayFormat>{000}</displayFormat>
        <inlineHelpText>Milestone Id to distinguish a milestone for an Asset/Initiative.</inlineHelpText>
        <label>Milestone Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <description>Milestone Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name/Label for this milestone.</inlineHelpText>
        <label>Milestone Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestones__c</fullName>
        <description>Stage of Milestone.</description>
        <label>Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preliminary Release Scope</fullName>
                </value>
                <value>
                    <fullName>Requirements Definition</fullName>
                </value>
                <value>
                    <fullName>Level of Effort Estimates</fullName>
                </value>
                <value>
                    <fullName>Preliminary Scope Lock</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Final Scope Lock (Design Sign-off)</fullName>
                </value>
                <value>
                    <fullName>Development &amp; Unit Test</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Deploy &amp; Train</fullName>
                </value>
                <value>
                    <fullName>Optimize/Maintain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Target__c</fullName>
        <description>Displays a status as red, green or yellow ball.</description>
        <formula>if((Planned_End_Date__c &lt; TODAY()) &amp;&amp; ( VALUE ( TEXT (Complete2__c ) ) &lt;&gt; 100), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;),
 

if((Planned_End_Date__c &lt;= TODAY()+5) &amp;&amp; ( VALUE ( TEXT (Complete2__c ) ) &lt;&gt; 100), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;),
 

IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)))</formula>
        <label>On Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of this Milestone</description>
        <inlineHelpText>Owner of this Milestone</inlineHelpText>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <description>Percentage completion of Milestone.</description>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <description>Expected or Preplanned date of completion of Milestone.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Planned End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <description>Baseline Plan Dates. Initial load, and not editable except after a re-baseline</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Baseline Plan Dates. Initial load, and not editable except after a re-baseline</inlineHelpText>
        <label>Planned Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <description>Current status of Milestone</description>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release related to this milestone.</description>
        <inlineHelpText>Release related to this milestone.</inlineHelpText>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOURCE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SOURCE ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Starting Date for the Milestone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status2__c</fullName>
        <formula>CASE( VALUE (TEXT ( Complete2__c )) , 
0, &apos;Not Started&apos;, 
100, &apos;Complete&apos;, 
&apos;In Progress&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Progress__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>On_Target__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <recordTypes>
        <fullName>Milestone_Asset_Initiative</fullName>
        <active>false</active>
        <description>Milestones for Assets/Initiatives</description>
        <label>Milestone for Asset/Initiative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Milestone_Release</fullName>
        <active>true</active>
        <description>Milestones specific to Releases.</description>
        <label>Milestone for Release</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Progress_Required</fullName>
        <active>true</active>
        <description>Progress on a milestone is mandatory</description>
        <errorConditionFormula>ISPICKVAL( Progress__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Please select an appropriate status for this milestone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Release_Actual_End_Date</fullName>
        <active>true</active>
        <description>Release end date should not be greater than today&apos;s date</description>
        <errorConditionFormula>Actual_End_Date__c &gt; Today()</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual End Date can&apos;t be greater than today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SetMilestone</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Asset_Initiative_Milestone__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Asset_Initiative_Milestone__c</errorDisplayField>
        <errorMessage>Select an appropriate Milestone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>planned_end_date</fullName>
        <active>true</active>
        <description>planned end date should be greater than start date</description>
        <errorConditionFormula>OR(Planned_End_Date__c  &lt;  Planned_Start_Date__c , Actual_End_Date__c  &lt;  Planned_Start_Date__c )</errorConditionFormula>
        <errorMessage>Planned/Actual End Date must be greater than the Start Date.</errorMessage>
    </validationRules>
</CustomObject>